Added classification model for coded comments

--- a/figures.ipynb
+++ b/figures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -690,7 +690,7 @@
        "              max     67.000000     92.000000   69.000000   82.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,29 +707,273 @@
     "submissions = pandas.DataFrame.from_dict(data['submissions'])\n",
     "\n",
     "s = submissions.groupby('flair').describe()\n",
-    "s"
+    "s\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1=Comment; 2=Subcomment</th>\n",
+       "      <th>Submission</th>\n",
+       "      <th>action</th>\n",
+       "      <th>author</th>\n",
+       "      <th>comment_id</th>\n",
+       "      <th>commment_num</th>\n",
+       "      <th>created</th>\n",
+       "      <th>evidence_source</th>\n",
+       "      <th>is_moderator</th>\n",
+       "      <th>note</th>\n",
+       "      <th>parent_id</th>\n",
+       "      <th>score</th>\n",
+       "      <th>stance</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>argument_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>855</td>\n",
+       "      <td>859</td>\n",
+       "      <td>12</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "      <td>859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1077</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "      <td>1078</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "60"
+       "               1=Comment; 2=Subcomment  Submission  action  author  \\\n",
+       "argument_type                                                        \n",
+       "0                                  859         859     859     859   \n",
+       "1                                 1078        1078    1078    1078   \n",
+       "\n",
+       "               comment_id  commment_num  created  evidence_source  \\\n",
+       "argument_type                                                       \n",
+       "0                     859           859      859              855   \n",
+       "1                    1078          1078     1078             1077   \n",
+       "\n",
+       "               is_moderator  note  parent_id  score  stance  text  \n",
+       "argument_type                                                      \n",
+       "0                       859    12        859    859     859   859  \n",
+       "1                      1078    36       1078   1078    1078  1078  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "_file = open('comment_predict.json', 'r')\n",
+    "data = json.loads(_file.read())\n",
+    "comments = pandas.DataFrame.from_dict(data)\n",
+    "comments = comments[comments['1=Comment; 2=Subcomment'] == 1]\n",
+    "comments = comments[((comments['argument_type'] == '1') | \n",
+    "                    (comments['argument_type'] == '2')) |\n",
+    "                    (comments['argument_type'] == '3')\n",
+    "                   ]\n",
+    "def action(x):\n",
+    "    return '6' in x\n",
+    "comments['action'] = comments['action'].apply(action)\n",
+    "comments = comments[comments['action'] == True]\n",
+    "\n",
+    "def toBinary(x):\n",
+    "    return 1 if (x == '1' or x == '2') else 0\n",
+    "comments['argument_type'] = comments['argument_type'].apply(toBinary)\n",
+    "comments.groupby('argument_type').count()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reddit dataset has 1937 data points with 50 variables each.\n",
+      "******************************\n",
+      "\n",
+      "Training a GaussianNB\n",
+      "-Accuracy\n",
+      "[ 0.59278351  0.52061856  0.63824289  0.55813953  0.54005168]\n",
+      "Mean score: 0.570 (+/-0.042)\n",
+      "-Recall\n",
+      "[ 0.59278351  0.52061856  0.63824289  0.55813953  0.54005168]\n",
+      "Mean score: 0.570 (+/-0.042)\n",
+      "-Precision\n",
+      "[ 0.6775238   0.65565873  0.7390433   0.73587942  0.64139198]\n",
+      "Mean score: 0.690 (+/-0.041)\n",
+      "******************************\n",
+      "\n",
+      "Training a SVC\n",
+      "-Accuracy\n",
+      "[ 0.82474227  0.78608247  0.82428941  0.83204134  0.81912145]\n",
+      "Mean score: 0.817 (+/-0.016)\n",
+      "-Recall\n",
+      "[ 0.82474227  0.78608247  0.82428941  0.83204134  0.81912145]\n",
+      "Mean score: 0.817 (+/-0.016)\n",
+      "-Precision\n",
+      "[ 0.82562979  0.79231029  0.82564827  0.84098424  0.81932593]\n",
+      "Mean score: 0.821 (+/-0.016)\n",
+      "******************************\n",
+      "\n",
+      "Training a GradientBoostingClassifier\n",
+      "-Accuracy\n",
+      "[ 0.82989691  0.81443299  0.82945736  0.84237726  0.79328165]\n",
+      "Mean score: 0.822 (+/-0.017)\n",
+      "-Recall\n",
+      "[ 0.82989691  0.81443299  0.82945736  0.84237726  0.79328165]\n",
+      "Mean score: 0.822 (+/-0.017)\n",
+      "-Precision\n",
+      "[ 0.83068019  0.81391781  0.82945736  0.84299422  0.79375519]\n",
+      "Mean score: 0.822 (+/-0.017)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfTransformer\n",
+    "from sklearn.metrics import classification_report, f1_score, accuracy_score, confusion_matrix, r2_score\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "import sklearn.decomposition\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn import svm\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.cross_validation import KFold\n",
+    "\n",
+    "# Start of the model prediction section\n",
+    "\n",
+    "bow_transformer = CountVectorizer(stop_words='english').fit(comments['text'])\n",
+    "data_total_text = bow_transformer.transform(comments['text'])\n",
+    "pca = sklearn.decomposition.TruncatedSVD(n_components=50)\n",
+    "data_total_text = pca.fit_transform(data_total_text)\n",
+    "argument = comments['argument_type']\n",
+    "out_text = (\"Reddit dataset has {} data points with {} variables each.\".format(*data_total_text.shape))\n",
+    "print out_text\n",
+    "\n",
+    "from sklearn.cross_validation import train_test_split as tts\n",
+    "from sklearn.cross_validation import cross_val_score\n",
+    "X_train, X_test, y_train, y_test = tts(data_total_text, argument, test_size=0.25,random_state=1)\n",
+    "\n",
+    "def evaluate_cross_validation(clf, X, y, K):\n",
+    "    cv = KFold(len(y), K, shuffle=True, random_state=12)\n",
+    "    scores = cross_val_score(clf, X, y, cv=cv, scoring='accuracy')\n",
+    "    print '-Accuracy'\n",
+    "    print(scores)\n",
+    "    print(\"Mean score: {0:.3f} (+/-{1:.3f})\".format(scores.mean(), scores.std()))\n",
+    "    print '-Recall'\n",
+    "    scores = cross_val_score(clf, X, y, cv=cv, scoring='recall_weighted')\n",
+    "    print(scores)\n",
+    "    print(\"Mean score: {0:.3f} (+/-{1:.3f})\".format(scores.mean(), scores.std()))\n",
+    "    print '-Precision'\n",
+    "    scores = cross_val_score(clf, X, y, cv=cv, scoring='precision_weighted')\n",
+    "    print(scores)\n",
+    "    print(\"Mean score: {0:.3f} (+/-{1:.3f})\".format(scores.mean(), scores.std()))\n",
+    "\n",
+    "'''\n",
+    "def train_classifier(clf, X_train, y_train):\n",
+    "    clf.fit(X_train, y_train)\n",
+    "\n",
+    "def predict_labels(clf, feature, target):\n",
+    "    y_pred = clf.predict(feature)\n",
+    "    return y_pred, f1_score(target, y_pred)\n",
+    "\n",
+    "def train_predict(clf, X_train, X_test, y_train, y_test):\n",
+    "    print ('Training a {}'.format(clf.__class__.__name__))\n",
+    "    train_classifier(clf, X_train, y_train)\n",
+    "    f1_train = predict_labels(clf, X_train, y_train)[1]\n",
+    "    y_pred, f1_test = predict_labels(clf, X_test, y_test)\n",
+    "    _results(y_test, y_pred)\n",
+    "    \n",
+    "    \n",
+    "    return f1_train, f1_test\n",
+    "\n",
+    "def _results(y_test, pred):\n",
+    "    print 'Accuracy', accuracy_score(y_test, pred)\n",
+    "    print '\\nConfusion Matrix\\n', confusion_matrix(y_test, pred)\n",
+    "    print '\\n Classification Report\\n', classification_report(y_test, pred)\n",
+    "'''\n",
+    "\n",
+    "rand_state = 12\n",
+    "clf_A = GaussianNB()\n",
+    "clf_B = svm.SVC(random_state=rand_state)\n",
+    "clf_C = GradientBoostingClassifier(random_state=rand_state)\n",
+    "\n",
+    "\n",
+    "\n",
+    "models = [clf_A, clf_B, clf_C]\n",
+    "results = []\n",
+    "predi = 0\n",
+    "for model in models:\n",
+    "    print('******************************\\n')\n",
+    "    print ('Training a {}'.format(model.__class__.__name__))\n",
+    "    #train_values = train_predict(model, X_train, X_test, y_train, y_test)\n",
+    "    #results.append(train_values)\n",
+    "    evaluate_cross_validation(model, data_total_text, argument, 5)\n",
+    "    \n"
    ]
   }
  ],
